[project]
name = "mops"
dynamic = ["version"]
requires-python = ">=3.7"

readme = "README.md"
license = {text = "BSD-3-Clause"}
description = "" # TODO
authors = [
    # TODO
]

dependencies = [
    "numpy"
]

keywords = [] # TODO
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
# homepage = "TODO"
# documentation = "TODO"
repository = "https://github.com/lab-cosmo/mops"
# changelog = "TODO"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=68",
    "cmake <3.28",  # this should be changed once cmake 3.28.1 is on PyPI
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["python/mops/src/"]

### ======================================================================== ###
[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["python/mops/tests"]
